fixed checkstyle warnings in opac package